--- a/views/home.html
+++ b/views/home.html
@@ -14,8 +14,13 @@
     <div class="container">
         <header>
             <img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
-            Lugar para poner la barra de búsqueda
-            Comprá en cuotas y sin tarjeta de crédito
+            <form action="#" method="POST">
+                <input type="search" class="search" placeholder="Buscar productos, marcas">
+                <button type="submit" class="fa fa-search lupa"></button>
+            </form>
+            <div class="">
+                <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            </div>
             <nav>
                 <a href="#">Ofertas</a>
                 <a href="#">Tiendas Oficiales</a>
@@ -27,10 +32,13 @@
                 <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
                 <a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
             </nav>
+            <a href="#" class="hamburguer-button">
+                <i class="fas fa-bars"></i>
+            </a>
         </header>
         <main>
             <section class="basado-ultima-visita">
-                <h3 class="">Basado en tu última visita</h3>
+                <h3 class="titulares">Basado en tu última visita</h3>
                 <div class="">
                     <article>
                         <img src="/img/img-cafetera-moulinex.jpg" alt="">
@@ -56,8 +64,8 @@
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
                         <div>
                           <!--   <i class="fas fa-truck"></i> -->
-                            <p class="precios">$70.500</p>
-                            <p class="descuentos">10% OFF</p>
+                            <p class="precio">$70.500</p>
+                            <p class="descuento">10% OFF</p>
                             <h3 class="descripcion">Samsung Galaxy S10</h4>
                         </div>
                     </article>
@@ -66,8 +74,8 @@
                         <img src="/img/img-tv-samsung-smart.jpg" alt="">
                         <div>
                           <!--   <i class="fas fa-truck"></i> -->
-                            <p class="precios">$23.200</p>
-                            <p class="descuentos">5% OFF</p>
+                            <p class="precio">$23.200</p>
+                            <p class="descuento">5% OFF</p>
                             <h3 class="descripcion">SmartTv Samsung 43"</h4>
                         </div>
                     </article>
@@ -75,14 +83,14 @@
             </section>
 
             <section class="ofertas">
-                <h3 class="">Sección de Ofertas</h3>
+                <h3 class="titulares">Sección de Ofertas</h3>
                 <div class="">
                     <article>
                         <img src="/img/img-cafetera-moulinex.jpg" alt="">
                         <div>
                             <!-- <i class="fas fa-truck"></i> -->
-                            <p class="precios">$6.770</p>
-                            <p class="descuentos">40% OFF</p>
+                            <p class="precio">$6.770</p>
+                            <p class="descuento">40% OFF</p>
                             <h3 class="descripcion">Cafetera Moulinex</h4>
                         </div>
                     </article>
@@ -91,8 +99,8 @@
                         <img src="/img/img-macbook-pro-2019.jpg" alt="">
                         <div>
                             <!-- <i class="fas fa-truck"></i> -->
-                            <p class="precios">$230.000</p>
-                            <p class="descuentos">20% OFF</p>
+                            <p class="precio">$230.000</p>
+                            <p class="descuento">20% OFF</p>
                             <h3 class="descripcion">MacBook Pro 2019</h4>
                         </div>
                     </article>
@@ -101,8 +109,8 @@
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
                         <div>
                             <!-- <i class="fas fa-truck"></i> -->
-                            <p class="precios">$70.500</p>
-                            <p class="descuentos">10% OFF</p>
+                            <p class="precio">$70.500</p>
+                            <p class="descuento">10% OFF</p>
                             <h3 class="descripcion">Samsung Galaxy S10</h4>
                         </div>
                     </article>
@@ -111,8 +119,8 @@
                         <img src="/img/img-tv-samsung-smart.jpg" alt="">
                         <div>
                             <!-- <i class="fas fa-truck"></i> -->
-                            <p class="precios">$23.200</p>
-                            <p class="descuentos">5% OFF</p>
+                            <p class="precio">$23.200</p>
+                            <p class="descuento">5% OFF</p>
                             <h3 class="descripcion">SmartTv Samsung 43"</h4>
                         </div>
                     </article>
@@ -120,34 +128,34 @@
             </section>
         </main>
         <footer>
-            <section>
+            <article>
                 <div>
-                    <!-- <i class="fas fa-credit-card imgs-footer"></i> -->
+                    <i class="fas fa-credit-card imgs-footer icono"></i>
                     <h3>Pagá con tarjeta o en efectivo</h3>
                     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!
                         </p>
                 </div>
-            </section>
-            <section>
+            </article>
+            <article>
                 <div>
-                    <!-- <i class="fas fa-gift imgs-footer"></i> -->
+                    <i class="fas fa-gift imgs-footer icono"></i>
                     <h3>Envío gratis desde $ 2.500</h3>
                     <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.
                         </p>
                 </div>
-            </section>
-            <section>
+            </article>
+            <article>
                 <div>
-                    <!-- <i class="fas fa-user-shield imgs-footer"></i>  -->
+                    <i class="fas fa-user-shield imgs-footer icono"></i> 
                     <h3>Seguridad, de principio a fin</h3>
                     <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
                 </div>
-            </section>
-            <section>
+            </article>
+            <article>
                 <span>
                 <p class="rights">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
                 </span>
-            </section>
+            </article>
         </footer>         
 </body>
 </html>
