--- a/views/home.html
+++ b/views/home.html
@@ -13,25 +13,31 @@
 <body>
     <div class="container">
         <header>
-            <img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
-            <form action="#" method="POST">
-                <input type="search" class="search" placeholder="Buscar productos, marcas">
-                <button type="submit" class="fa fa-search lupa"></button>
-            </form>
-            <div class="">
+            <div class="contenedor-principal">
+                <div class="logo"><img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre"></div>
+                <div class="search">
+                    <form action="#" method="POST">
+                        <input type="search" class="search" placeholder="Buscar productos, marcas">
+                        <button type="submit" class="fa fa-search lupa"></button>
+                    </form>
+                </div>
+            </div>
+            <div class="compra-en-cuotas">
                 <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
             </div>
-            <nav>
-                <a href="#">Ofertas</a>
-                <a href="#">Tiendas Oficiales</a>
-                <a href="#">Ayuda</a>
-                <a href="#">Vender</a>
-            </nav>
-            <nav>
-                <a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a>
-                <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-                <a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
-            </nav>
+            <div class="contenedor-nav">
+                <nav>
+                    <a href="#">Ofertas</a>
+                    <a href="#">Tiendas Oficiales</a>
+                    <a href="#">Ayuda</a>
+                    <a href="#">Vender</a>
+                </nav>
+                <nav>
+                    <a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a>
+                    <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+                    <a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
+                </nav>
+            </div>
             <a href="#" class="hamburguer-button">
                 <i class="fas fa-bars"></i>
             </a>
@@ -39,89 +45,91 @@
         <main>
             <section class="basado-ultima-visita">
                 <h3 class="titulares">Basado en tu última visita</h3>
-                <div class="">
-                    <article>
-                        <img src="/img/img-cafetera-moulinex.jpg" alt="">
-                        <div>
-                            <!-- <i class="fas fa-truck truck"></i> -->
-                            <p class="precio">$6.770</p>
-                            <p class="descuento">40% OFF</p>
-                            <h3 class="descripcion">Cafetera Moulinex</h4>
-                        </div>
-                    </article>
 
-                    <article>
-                        <img src="/img/img-macbook-pro-2019.jpg" alt="">
-                        <div>
-                            <!-- <i class="fas fa-truck"></i> -->
-                            <p class="precio">$230.000</p>
-                            <p class="descuento">20% OFF</p>
-                            <h3 class="descripcion">MacBook Pro 2019</h4>
-                        </div>
-                    </article>
+                    <div class="container-flexbox">
+                        <article>
+                            <img src="/img/img-cafetera-moulinex.jpg" alt="">
+                            <div>
+                                <i class="fas fa-truck truck"></i>
+                                <p class="precio">$6.770</p>
+                                <p class="descuento">40% OFF</p>
+                                <p class="descripcion">Cafetera Moulinex</p>
+                            </div>
+                        </article>
 
-                    <article>
-                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
-                        <div>
-                          <!--   <i class="fas fa-truck"></i> -->
-                            <p class="precio">$70.500</p>
-                            <p class="descuento">10% OFF</p>
-                            <h3 class="descripcion">Samsung Galaxy S10</h4>
-                        </div>
-                    </article>
+                        <article>
+                            <img src="/img/img-macbook-pro-2019.jpg" alt="">
+                            <div>
+                                <i class="fas fa-truck"></i>
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% OFF</p>
+                                <p class="descripcion">MacBook Pro 2019</p>
+                            </div>
+                        </article>
 
-                    <article>
-                        <img src="/img/img-tv-samsung-smart.jpg" alt="">
-                        <div>
-                          <!--   <i class="fas fa-truck"></i> -->
-                            <p class="precio">$23.200</p>
-                            <p class="descuento">5% OFF</p>
-                            <h3 class="descripcion">SmartTv Samsung 43"</h4>
-                        </div>
-                    </article>
-                </div>
+                        <article>
+                            <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
+                            <div>
+                                <i class="fas fa-truck"></i>
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% OFF</p>
+                                <p class="descripcion">Samsung Galaxy S10</p>
+                            </div>
+                        </article>
+
+                        <article>
+                            <img src="/img/img-tv-samsung-smart.jpg" alt="">
+                            <div>
+                                <i class="fas fa-truck"></i>
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% OFF</p>
+                                <p class="descripcion">SmartTv Samsung 43"</p>
+                            </div>
+                        </article>
+                    </div>
+                
             </section>
 
             <section class="ofertas">
                 <h3 class="titulares">Sección de Ofertas</h3>
-                <div class="">
+                <div class="container-flexbox">
                     <article>
                         <img src="/img/img-cafetera-moulinex.jpg" alt="">
                         <div>
-                            <!-- <i class="fas fa-truck"></i> -->
+                            <i class="fas fa-truck"></i>
                             <p class="precio">$6.770</p>
                             <p class="descuento">40% OFF</p>
-                            <h3 class="descripcion">Cafetera Moulinex</h4>
+                            <p class="descripcion">Cafetera Moulinex</p>
                         </div>
                     </article>
 
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="">
                         <div>
-                            <!-- <i class="fas fa-truck"></i> -->
+                            <i class="fas fa-truck"></i>
                             <p class="precio">$230.000</p>
                             <p class="descuento">20% OFF</p>
-                            <h3 class="descripcion">MacBook Pro 2019</h4>
+                            <p class="descripcion">MacBook Pro 2019</p>
                         </div>
                     </article>
 
                     <article>
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="">
                         <div>
-                            <!-- <i class="fas fa-truck"></i> -->
+                            <i class="fas fa-truck"></i>
                             <p class="precio">$70.500</p>
                             <p class="descuento">10% OFF</p>
-                            <h3 class="descripcion">Samsung Galaxy S10</h4>
+                            <p class="descripcion">Samsung Galaxy S10</p>
                         </div>
                     </article>
 
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="">
                         <div>
-                            <!-- <i class="fas fa-truck"></i> -->
+                            <i class="fas fa-truck"></i>
                             <p class="precio">$23.200</p>
                             <p class="descuento">5% OFF</p>
-                            <h3 class="descripcion">SmartTv Samsung 43"</h4>
+                            <p class="descripcion">SmartTv Samsung 43"</p>
                         </div>
                     </article>
                 </div>
