--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,17 +71,23 @@ margin: 2px;
 }
 .precio{
     font-size: var(--default-price);
-    display: inline-block;
+    display: inline;
+    width: 30%;
 }
 .descuento{
     font-size: var(--default-discount);
     color: var(--default-verde);
-    display: inline-block;
+    display: inline;
+    width: 70%;
 }
 .descripcion{
     font-size: var(--default-description);
     color: var(--default-gris-oscuro);
     font-weight: bold;
+    display: none;
+}
+main section div article:hover .descripcion {
+    display:block;
 }
 .icono {
     font-size: 2em;
@@ -101,8 +107,7 @@ main div {
 
 main section div article {
     text-align: left;
-    padding:10px;
-    padding-left:30px;
+    padding:15px;
     margin:10px;
     background-color: #fff;
 }
@@ -130,17 +135,30 @@ main section article div p{
     justify-content: center;
 }
 /* //////////Footer////////// */
+footer{
+    display:flex;
+    justify-content: center;
+}
 footer > article {
     text-align: center;
 }
+footer  i:hover {
+    color: #1632a3;
+}
 
 /* //////////Responsive////////// */
-@media (min-width: 320px){
+@media (min-width: 361px){
 
 }
-@media (min-width: 768px){
+@media (min-width: 769px){
+    main section div article:hover .descripcion {
+        display:block;
+    }
     .container-flexbox article {
         max-width: 40%;
+    }
+    .container-flexbox article:hover {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
     .container header nav{
         display:inline-block;
@@ -230,4 +248,11 @@ label{
     font-size: 1em;
     font-family: var(--default-family);
     border-radius: 0.5rem;
+}
+form input:hover {
+    border-color:tomato;
+}
+form button:hover.send,
+form button:hover.reset {
+    background-color: #0022AA;
 }
