--- a/views/home.html
+++ b/views/home.html
@@ -162,7 +162,7 @@
             <article>
             </article>
         </footer>         
-        <span>
+        <span class="copyright">
         <p class="rights">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </span>
 </body>
