--- a/views/home.html
+++ b/views/home.html
@@ -42,6 +42,9 @@
                 <i class="fas fa-bars"></i>
             </a>
         </header>
+        <section>
+            <img src="/img/img-home-banner.jpg" alt="Banner Fiestas">
+        </section> 
         <main>
             <section class="basado-ultima-visita">
                 <h3 class="titulares">Basado en tu última visita</h3>
